[tool.poetry]
name = "zetascale"
version = "2.7.8"
description = "Rapidly Build, Optimize, and Train SOTA AI Models"
authors = ["Zeta Team <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/zeta"
keywords = [
    "artificial intelligence",
    "deep learning",
    "optimizers",
    "Prompt Engineering",
    "swarms",
    "agents",
    "llms",
    "transformers",
    "multi-agent",
    "swarms of agents",
    "Enterprise-Grade Agents",
    "Production-Grade Agents",
    "Agents",
    "Multi-Grade-Agents",
    "Swarms",
    "Transformers",
    "LLMs",
    "Prompt Engineering",
    "Agents",
    "Generative Agents",
    "Generative AI",
    "Agent Marketplace",
    "Agent Store",
    "LSTMS",
    "GRUs",
    "RNNs",
    "CNNs",
    "MLPs",
    "DNNs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


packages = [
    { include = "zeta" },
    { include = "zeta/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.1.1,<3.0"
einops = "0.8.0"
bitsandbytes = "*"
transformers = "4.44.2"
einops-exts = "0.0.4"
torchvision = "*"
accelerate = "0.33.0"
loguru = "*"
vector-quantize-pytorch = "1.17.1"
beartype = "0.18.5"
tqdm = "4.66.5"
rich = "13.8.0"
colt5-attention = "*"
argparse = "^1.4.0"
local-attention = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
ruff = ">=0.5.1,<0.5.2"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = ">=2023.3,<2025.0"
black = ">=23.1,<25.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"
pytest = "8.3.2"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80
target-version = ['py38']
preview = true
